--- a/Configuration/printer.cfg
+++ b/Configuration/printer.cfg
@@ -11,33 +11,20 @@
 ##################################################################
 [mcu]
 serial: /dev/serial/by-id/usb-Klipper_Klipper_firmware_12345-if00
+restart_method: command
 
 [printer]
-kinematics: cartesian
-max_velocity: 300
+kinematics: corexy
+max_velocity: 500
 max_accel: 3000
-max_z_velocity: 5
-max_z_accel: 100
-
+max_z_velocity: 10
+max_z_accel: 300
+minimum_cruise_ratio: 0.5
+square_corner_velocity: 5.0
 
 ##################################################################
 # MOVEMENT CONFIGURATION
 ##################################################################
-
-
-
-##################################################################
-# EXTRUDER CONFIGURATION
-##################################################################
-
-
-
-##################################################################
-# HOT-BED CONFIGURATION
-##################################################################
-
-
-# Motor1
 [stepper_x]
 step_pin: PE6
 dir_pin: PE5
@@ -49,7 +36,6 @@ position_endstop: 0
 position_max: 235
 homing_speed: 50
 
-# Motor2
 [stepper_y]
 step_pin: PE2
 dir_pin: PE1
@@ -61,7 +47,6 @@ position_endstop: 0
 position_max: 235
 homing_speed: 50
 
-# Motor3
 [stepper_z]
 step_pin: PB8
 dir_pin: !PB7
@@ -76,18 +61,10 @@ homing_speed: 8
 second_homing_speed: 3
 homing_retract_dist: 3
 
-## Motor4
-# The M8P only has 4 heater outputs which leaves an extra stepper
-# This can be used for a second Z stepper, dual_carriage, extruder co-stepper,
-# or other accesory such as an MMU
-#[stepper_]
-#step_pin: PB4
-#dir_pin: PB3
-#enable_pin: !PB6
-#endstop_pin: ^PF1
-#...
 
-# Motor5
+##################################################################
+# EXTRUDER CONFIGURATION
+##################################################################
 [extruder]
 step_pin: PG13
 dir_pin: PG12
@@ -100,11 +77,34 @@ heater_pin: PA0 # HE0
 sensor_pin: PB0 # T0
 sensor_type: Generic 3950
 control: pid
-pid_Kp: 22.2
-pid_Ki: 1.08
-pid_Kd: 114
 min_temp: 0
 max_temp: 250
+min_extrude_temp: 170
+
+
+##################################################################
+# HOT-BED CONFIGURATION
+##################################################################
+[heater_bed]
+heater_pin: PF5
+sensor_pin: PB1 # TB 
+sensor_type: ATC Semitec 104GT-2
+control: watermark
+min_temp: 0
+max_temp: 130
+
+
+
+## Motor4
+# The M8P only has 4 heater outputs which leaves an extra stepper
+# This can be used for a second Z stepper, dual_carriage, extruder co-stepper,
+# or other accesory such as an MMU
+#[stepper_]
+#step_pin: PB4
+#dir_pin: PB3
+#enable_pin: !PB6
+#endstop_pin: ^PF1
+#...
 
 ## End-Stop 5
 #[filament_switch_sensor material_0]
@@ -141,13 +141,6 @@ max_temp: 250
 #sensor_pin: PA7 # T3
 #...
 
-[heater_bed]
-heater_pin: PF5
-sensor_pin: PB1 # TB 
-sensor_type: ATC Semitec 104GT-2
-control: watermark
-min_temp: 0
-max_temp: 130
 
 #[fan_generic soc-fan]
 #pin: host:gpio79  #CB1
