--- a/Configuration/printer.cfg
+++ b/Configuration/printer.cfg
@@ -2,315 +2,7 @@
 # STM32H723
 # 128KiB bootloader
 # 25 MHz crystal
-# USB (on PA11/PA12) or CAN bus (on PD0/PD1) or Serial (on USART1 PA10/PA9)
-
-# See docs/Config_Reference.md for a description of parameters.
-
-##################################################################
-# PRINTER CONFIGURATION
-##################################################################
-[mcu]
-serial: /dev/serial/by-id/usb-Klipper_Klipper_firmware_12345-if00
-restart_method: command
-
-[printer]
-kinematics: corexy
-max_velocity: 500
-max_accel: 3000
-max_z_velocity: 10
-max_z_accel: 300
-minimum_cruise_ratio: 0.5
-square_corner_velocity: 5.0
-
-##################################################################
-# MOVEMENT CONFIGURATION
-##################################################################
-[stepper_x]
-step_pin: PE6
-dir_pin: PE5
-enable_pin: !PC14
-microsteps: 16
-rotation_distance: 40
-endstop_pin: ^PF4
-position_endstop: 0
-position_max: 235
-homing_speed: 50
-
-[stepper_y]
-step_pin: PE2
-dir_pin: PE1
-enable_pin: !PE4
-microsteps: 16
-rotation_distance: 40
-endstop_pin: ^PF3
-position_endstop: 0
-position_max: 235
-homing_speed: 50
-
-[stepper_z]
-step_pin: PB8
-dir_pin: !PB7
-enable_pin: !PE0
-microsteps: 16
-rotation_distance: 8
-endstop_pin: ^PF2
-position_endstop: 0
-position_max: 270
-position_min: -5.0
-homing_speed: 8
-second_homing_speed: 3
-homing_retract_dist: 3
-
-
-##################################################################
-# EXTRUDER CONFIGURATION
-##################################################################
-[extruder]
-step_pin: PG13
-dir_pin: PG12
-enable_pin: !PG15
-microsteps: 16
-rotation_distance: 33.500
-nozzle_diameter: 0.4
-filament_diameter: 1.75
-heater_pin: PA0 # HE0
-sensor_pin: PB0 # T0
-sensor_type: Generic 3950
-control: pid
-min_temp: 0
-max_temp: 250
-min_extrude_temp: 170
-
-
-##################################################################
-# HOT-BED CONFIGURATION
-##################################################################
-[heater_bed]
-heater_pin: PF5
-sensor_pin: PB1 # TB 
-sensor_type: ATC Semitec 104GT-2
-control: watermark
-min_temp: 0
-max_temp: 130
-
-
-
-## Motor4
-# The M8P only has 4 heater outputs which leaves an extra stepper
-# This can be used for a second Z stepper, dual_carriage, extruder co-stepper,
-# or other accesory such as an MMU
-#[stepper_]
-#step_pin: PB4
-#dir_pin: PB3
-#enable_pin: !PB6
-#endstop_pin: ^PF1
-#...
-
-## End-Stop 5
-#[filament_switch_sensor material_0]
-#switch_pin: PF0
-
-## Motor6
-#[extruder1]
-#step_pin: PG9
-#dir_pin: PD7
-#enable_pin: !PG11 
-#heater_pin: PA1 # HE1 
-#sensor_pin: PC5 # T1
-#...
-
-## End-Stop 6
-#[filament_switch_sensor material_1]
-#switch_pin: PC15
-
-## Motor7
-#[extruder2]
-#step_pin: PD4
-#dir_pin: PD3
-#enable_pin: !PD6
-#heater_pin: PA3 # HE2
-#sensor_pin: PC4 # T2
-#...
-
-## Motor8
-#[extruder3]
-#step_pin: PC7
-#dir_pin: PC8
-#enable_pin: !PD2
-#heater_pin: PA5 # HE3
-#sensor_pin: PA7 # T3
-#...
-
-
-#[fan_generic soc-fan]
-#pin: host:gpio79  #CB1
-#pin: host:gpio26  #CM4
-
-# Fan0
-[fan]
-pin: PF7
-
-## Fan1
-#[heater_fan fan1]
-#pin: PF9
-
-## Fan2
-#[heater_fan fan2]
-#pin: PF6
-
-## Fan3
-#[heater_fan fan3]
-#pin: PF8
-
-## Fan4
-#[heater_fan fan4]
-#pin: PA4
-
-## Fan5
-#[heater_fan fan5]
-#pin: PA6
-#tachometer_pin: PC2
-
-## Fan6
-#[heater_fan fan6]
-#pin: PA2
-#tachometer_pin: PC1
-
-########################################
-# TMC2209 configuration
-########################################
-
-## Motor1
-#[tmc2209 stepper_x]
-#uart_pin: PC13
-##diag_pin: PF4 
-#run_current: 0.800
-#stealthchop_threshold: 999999
-
-## Motor2
-#[tmc2209 stepper_y]
-#uart_pin: PE3
-##diag_pin: PF3
-#run_current: 0.800
-#stealthchop_threshold: 999999
-
-## Motor3
-#[tmc2209 stepper_z]
-#uart_pin: PB9
-##diag_pin: PF2
-#run_current: 0.650
-#stealthchop_threshold: 999999
-
-## Motor4
-#[tmc2209 stepper_]
-#uart_pin: PB5
-##diag_pin: PF1
-#run_current: 0.650
-#stealthchop_threshold: 999999
-
-## Motor5
-#[tmc2209 extruder]
-#uart_pin: PG14
-#run_current: 0.800
-#stealthchop_threshold: 999999
-
-## Motor6
-#[tmc2209 extruder1]
-#uart_pin: PG10
-#run_current: 0.800
-#stealthchop_threshold: 999999
-
-## Motor7
-#[tmc2209 extruder2]
-#uart_pin: PD5
-#run_current: 0.800
-#stealthchop_threshold: 999999
-
-## Motor8
-#[tmc2209 extruder3]
-#uart_pin: PC6
-#run_current: 0.800
-#stealthchop_threshold: 999999
-
-########################################
-# TMC2130 configuration
-########################################
-
-## Motor1
-#[tmc2130 stepper_x]
-#cs_pin: PC13
-#spi_software_mosi_pin: PG6
-#spi_software_miso_pin: PG7
-#spi_software_sclk_pin: PG8
-##diag1_pin: PF4
-#run_current: 0.800
-#stealthchop_threshold: 999999
-
-## Motor2
-#[tmc2130 stepper_y]
-#cs_pin: PE3
-#spi_software_mosi_pin: PG6
-#spi_software_miso_pin: PG7
-#spi_software_sclk_pin: PG8
-##diag1_pin: PF3
-#run_current: 0.800
-#stealthchop_threshold: 999999
-
-## Motor3
-#[tmc2130 stepper_z]
-#cs_pin: PB9
-#spi_software_mosi_pin: PG6
-#spi_software_miso_pin: PG7
-#spi_software_sclk_pin: PG8
-##diag1_pin: PF2
-#run_current: 0.650
-#stealthchop_threshold: 999999
-
-## Motor4
-#[tmc2130 stepper_]
-#cs_pin: PB5
-#spi_software_mosi_pin: PG6
-#spi_software_miso_pin: PG7
-#spi_software_sclk_pin: PG8
-##diag1_pin: PF1
-#run_current: 0.800
-#stealthchop_threshold: 999999
-
-## Motor5
-#[tmc2130 extruder]
-#cs_pin: PG14
-#spi_software_mosi_pin: PG6
-#spi_software_miso_pin: PG7
-#spi_software_sclk_pin: PG8
-#run_current: 0.800
-#stealthchop_threshold: 999999
-
-## Motor6
-#[tmc2130 extruder1]
-#cs_pin: PG10
-#spi_software_mosi_pin: PG6
-#spi_software_miso_pin: PG7
-#spi_software_sclk_pin: PG8
-#run_current: 0.800
-#stealthchop_threshold: 999999
-
-## Motor7
-#[tmc2130 extruder2]
-#cs_pin: PD5
-#spi_software_mosi_pin: PG6
-#spi_software_miso_pin: PG7
-#spi_software_sclk_pin: PG8
-#run_current: 0.800
-#stealthchop_threshold: 999999
-
-## Motor8
-#[tmc2130 extruder3]
-#cs_pin: PC6
-#spi_software_mosi_pin: PG6
-#spi_software_miso_pin: PG7
-#spi_software_sclk_pin: PG8
-#run_current: 0.800
-#stealthchop_threshold: 999999
+# USB (on PA11/PA12), CAN bus (on PD0/PD1) or Serial (on USART1 PA10/PA9)
 
 [board_pins]
 aliases:
@@ -328,15 +20,290 @@ aliases:
     EXP2_7=PE8, EXP2_8=<RST>,
     EXP2_9=<GND>, EXP2_10=<NC>
 
-# See the sample-lcd.cfg file for definitions of common LCD displays.
+########################################
+# INCLUDE configuration
+########################################
+[include mainsail.cfg]
+[include filament.cfg]
+[include start.cfg]
+[include end.cfg]
+#[include adxl.cfg]
+[include display.cfg]
+[include macros.cfg]
 
-#[adxl345]
-#cs_pin: PA15
-#spi_bus: spi3a
+########################################
+# MCU configuration
+########################################
+[mcu]
+serial: /dev/serial/by-id/usb-Klipper_stm32h723xx_24002C001351313433343333-if00
+restart_method: command
 
-#[bltouch]
-#sensor_pin: PD13
-#control_pin: PD12
+[mcu CB1]
+serial: /tmp/klipper_host_mcu
+
+########################################
+# PRINTER configuration
+########################################
+[printer]
+kinematics: corexy
+max_velocity: 350
+max_accel: 3000
+max_z_velocity: 50
+max_z_accel: 500
+square_corner_velocity: 5.0
+
+[virtual_sdcard]
+path: ~/printer_data/gcodes
+on_error_gcode: CANCEL_PRINT
+
+#[output_pin MainBoardFan]
+#pin: !PB1
+
+[gcode_arcs]
+resolution: 1.0
+
+[respond]
+
+[exclude_object]
+
+[skew_correction]
+
+[bed_mesh]
+speed: 120
+horizontal_move_z: 10
+mesh_min: 40, 70
+mesh_max: 245, 240
+probe_count: 5, 3
+mesh_pps: 2, 3
+algorithm: bicubic
+bicubic_tension: 0.2
+
+#3DTouch knockoff
+[bltouch]
+sensor_pin: PD13
+control_pin: PD12
+x_offset: 3.0
+y_offset: 33.0
+speed: 2.0
+lift_speed: 10.0
+samples: 2
+sample_retract_dist: 2.0
+samples_result: median
+samples_tolerance: 0.100
+samples_tolerance_retries: 1
+
+[safe_z_home]
+z_hop: 10
+z_hop_speed: 15.0
+home_xy_position: 137,137
+
+[z_tilt]
+z_positions: 
+  8, 8
+  135, 262
+  262, 8
+points:
+  70, 30
+  165, 240
+  265, 30
+speed: 100
+horizontal_move_z: 15
+retries: 5
+retry_tolerance: 0.025
+
+########################################
+# EXTRUDER configuration
+########################################
+# Motor3
+[extruder]
+step_pin: PB8
+dir_pin: PB7
+enable_pin: !PE0
+microsteps: 16
+full_steps_per_rotation: 200
+rotation_distance: 4.637
+nozzle_diameter: 0.4
+filament_diameter: 1.75
+max_extrude_only_distance: 500
+max_extrude_only_velocity: 120
+heater_pin: PA0 # HE0
+sensor_pin: PB0 # T0
+sensor_type: EPCOS 100K B57560G104F
+#control: pid
+#pid_Kp: 22.2
+#pid_Ki: 1.08
+#pid_Kd: 114
+min_temp: 0
+max_temp: 250
+
+[firmware_retraction]
+retract_length: 1.0
+retract_speed: 120
+unretract_extra_length: 0
+unretract_speed: 100
+
+# Motor3
+[tmc2209 extruder]
+uart_pin: PB9
+interpolate: true
+run_current: 0.85
+sense_resistor: 0.11
+driver_TBL: 0
+driver_HEND: 6
+driver_HSTRT: 7
+driver_TOFF: 4
+
+########################################
+# HOTBED configuration
+########################################
+[heater_bed]
+heater_pin: PF5
+sensor_pin: PB1 # TB 
+sensor_type: EPCOS 100K B57560G104F
+#control: watermark
+min_temp: 0
+max_temp: 110
+
+########################################
+# MOTION configuration
+########################################
+# Motor1
+[stepper_x]
+step_pin: PE6
+dir_pin: !PE5
+enable_pin: !PC14
+microsteps: 16
+rotation_distance: 40
+full_steps_per_rotation: 200
+endstop_pin: ^PF4
+position_endstop: 265
+position_max: 265
+homing_speed: 50
+
+[tmc2209 stepper_x]
+uart_pin: PC13
+diag_pin: ^PF4 # X Endstop pin
+run_current: 1.41
+interpolate: True
+sense_resistor: 0.110
+#driver_SGTHRS: 255 # 255 is the most sensitive value, 0 is the least sensitive
+
+# Motor2
+[stepper_y]
+step_pin: PE2
+dir_pin: !PE1
+enable_pin: !PE4
+microsteps: 16
+rotation_distance: 40
+full_steps_per_rotation: 200
+endstop_pin: ^PF3
+position_endstop: 263
+position_max: 263
+homing_speed: 50
+
+[tmc2209 stepper_y]
+uart_pin: PE3
+diag_pin: PF3
+run_current: 1.41
+interpolate: True
+sense_resistor: 0.110
+#driver_SGTHRS: 255 # 255 is the most sensitive value, 0 is the least sensitive
+
+# Motor5 - Lewy przód
+[stepper_z]
+step_pin: PC7
+dir_pin: PC8
+enable_pin: !PD2
+microsteps: 16
+rotation_distance: 8
+endstop_pin: probe:z_virtual_endstop
+#position_endstop: 0
+position_max: 275
+position_min: -3
+homing_speed: 8
+second_homing_speed: 3
+homing_retract_dist: 3
+
+[tmc2209 stepper_z]
+uart_pin: PC6
+run_current: 0.650
+interpolate: false
+sense_resistor: 0.150
+
+# Motor7 - Tył
+[stepper_z1]
+step_pin: PD4
+dir_pin: PD3
+enable_pin: !PD6
+microsteps: 16
+rotation_distance: 8
+
+[tmc2209 stepper_z1]
+uart_pin: PD5
+run_current: 0.650
+interpolate: false
+sense_resistor: 0.150
+
+# Motor8 - Prawy przód
+[stepper_z2]
+step_pin: PG13
+dir_pin: PG12
+enable_pin: !PG15
+microsteps: 16
+rotation_distance: 8
+
+[tmc2209 stepper_z2]
+uart_pin: PG14
+run_current: 0.650
+interpolate: false
+sense_resistor: 0.150
+
+########################################
+# COOLING configuration
+########################################
+# Fan0 - part cooling 24v
+[fan]
+pin: PF7
+
+# Fan1 - hotend 24v
+[heater_fan fan1]
+pin: PF9
+
+#[fan_generic soc-fan]
+#pin: CB1:gpio79
+
+# Fan4 - 24v
+#[heater_fan fan4]
+#pin: PA4
+
+## Fan2 -12v
+#[heater_fan fan2]
+#pin: PF6
+
+## Fan3 - 12v
+#[heater_fan fan3]
+#pin: PF8
+
+## Fan5
+#[heater_fan fan5]
+#pin: PA6
+#tachometer_pin: PC2
+
+## Fan6
+#[heater_fan fan6]
+#pin: PA2
+#tachometer_pin: PC1
+
+########################################
+# NIEUŻYWANE
+########################################
+## End-Stop 5
+#[filament_switch_sensor material_0]
+#switch_pin: PF0
+
+## End-Stop 6
+#[filament_switch_sensor material_1]
+#switch_pin: PC15
 
 ## Proximity switch
 #[probe]
@@ -351,3 +318,44 @@ aliases:
 #[hall_filament_width_sensor]
 #adc1: PC0
 #adc2: PF10
+
+#*# <---------------------- SAVE_CONFIG ---------------------->
+#*# DO NOT EDIT THIS BLOCK OR BELOW. The contents are auto-generated.
+#*#
+#*# [heater_bed]
+#*# control = pid
+#*# pid_kp = 64.970
+#*# pid_ki = 2.504
+#*# pid_kd = 421.496
+#*#
+#*# [extruder]
+#*# control = pid
+#*# pid_kp = 19.887
+#*# pid_ki = 1.194
+#*# pid_kd = 82.780
+#*#
+#*# [bltouch]
+#*# z_offset = 2.499
+#*#
+#*# [input_shaper]
+#*# shaper_type_x = mzv
+#*# shaper_freq_x = 82.2
+#*# shaper_type_y = 2hump_ei
+#*# shaper_freq_y = 63.0
+#*#
+#*# [bed_mesh default]
+#*# version = 1
+#*# points =
+#*# 	-0.006250, -0.016250, -0.057500, -0.071250, -0.042500
+#*# 	0.012500, -0.018750, -0.025000, -0.046250, -0.030000
+#*# 	0.005000, -0.011250, 0.001250, -0.038750, -0.062500
+#*# x_count = 5
+#*# y_count = 3
+#*# mesh_x_pps = 2
+#*# mesh_y_pps = 3
+#*# algo = bicubic
+#*# tension = 0.2
+#*# min_x = 40.0
+#*# max_x = 245.0
+#*# min_y = 70.0
+#*# max_y = 240.0
